# python-microservice-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/workflows/: lint.yml  test.yml
alembic/: env.py
app/: auth.py  database.py  items.py  main.py  metadata.py  otel.py  protected.py  users.py
app/api/: __init__.py
app/api/routes/: healthcheck.py  users.py
app/api/routes/v1/: __init__.py  protected.py
app/core/: auth.py  database.py  db_utils.py  env.py  exceptions.py  logging_config.py  metadata.py  otel.py
app/models/: user.py
scripts/: generate_openapi.py  test_auth.sh  test_db.sh
tests/: conftest.py  test_auth.py  test_database.py  test_db.sh  test_healthcheck.py  test_items.py  test_logging_config.py  test_main.py  test_main_app.py  test_otel.py  test_users.py
tests/api/: __init__.py
tests/api/routes/: test_healthcheck.py  test_items.py  test_users.py
tests/api/routes/v1/: __init__.py  test_items.py  test_users.py
tests/core/: __init__.py  test_auth.py  test_database.py  test_db_utils.py  test_env.py  test_exceptions.py  test_logging_config.py  test_otel.py
tests/integration/: generate_openapi.py  test_auth.sh  test_logging.sh  test_main.py  test_main_app.py  test_openapi.sh
tests/scripts/: generate_openapi.py  test_db.sh
tests/utils/: __init__.py  app_factory.py  auth.py  database.py  env.py
