[project]
name = "fastapi-template"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "FastAPI Template"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "coverage==7.13.4",
    "isort==7.0.0",
    "mypy<2.0.0,>=1.8.0",
    "pre-commit==4.5.1",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "ruff==0.15.0",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/fastapi-template"
Issues = "https://github.com/remarkablemark/fastapi-template/issues"

[tool.black]
fast = true

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.pyright]
include = ["app", "tests"]
exclude = ["venv", ".venv", "alembic"]
strict = ["app/**"]
typeCheckingMode = "strict"
