[project]
name = "python-microservice-template"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Python microservice template"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "alembic>=1.18.3",
    "fastapi[standard]>=0.136.1,<1.0.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-sdk>=1.41.1",
    "psycopg[binary]>=3.3.3",
    "sqlmodel>=0.0.32",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "pre-commit==4.6.0",
    "pyright==1.1.409",
    "pytest==9.0.3",
    "ruff==0.15.12",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/python-microservice-template"
Issues = "https://github.com/remarkablemark/python-microservice-template/issues"

[tool.ruff]
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by ruff
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"
fail_under = 100

[tool.coverage.html]
show_contexts = true

[tool.pyright]
include = ["app", "tests"]
exclude = ["venv", ".venv", "alembic"]
strict = ["app/**"]
typeCheckingMode = "strict"
